[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

#requires = ["hatchling"]
#build-backend = "hatchling.build"

[project]
name = "jmetalpy"
version = "1.7.1"
description = "Python version of the jMetal framework"
readme = "README.md"
authors = [
    {name = "Antonio J. Nebro", email = "ajnebro@uma.es"},
    {name = "Antonio Benítez", email = "antonio.b@uma.es"}
]

maintainers = [
    {name = "Antonio J. Nebro", email = "ajnebro@uma.es"},
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3.9"
]
requires-python = ">=3.8"
dependencies = [
    "tqdm",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "matplotlib>=3.0.2",
    "scipy>=1.13.1",
    "statsmodels>=0.9.0",
    "mockito",
    "PyHamcrest"
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.optional-dependencies]
core = [
    "tqdm",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "matplotlib>=3.0.2",
    "scipy>=1.13.1",
    "statsmodels>=0.9.0",
    "mockito",
]

docs = [
    "tqdm",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "matplotlib>=3.0.2",
    "scipy>=1.13.1",
    "statsmodels>=0.9.0",
    "mockito",
    "jupyter",
    "nbsphinx"
]

distributed = [
    "tqdm",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=5.22.0",
    "matplotlib>=3.0.2",
    "scipy>=1.13.1",
    "statsmodels>=0.9.0",
    "mockito",
    "dask[complete]>=2024.3.0",
    "distributed>=2024.3.0",
    "pyspark>=3.4.0"
]

complete = [
    "tqdm",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "plotly>=3.3.0",
    "matplotlib>=3.0.2",
    "scipy>=1.3.0",
    "statsmodels>=0.9.0",
    "mockito",
    "jupyter",
    "nbsphinx",
    "dask[complete]>=2024.3.0",
    "distributed>=2024.3.0",
    "pyspark>=3.4.0"
]




