[metadata]
name = jmetalpy
version = 1.6.0
description = Python version of the jMetal framework
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/jMetal/jMetalPy
author = Antonio J. Nebro
author_email = antonio@lcc.uma.es
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Source = https://github.com/jMetal/jMetalPy
    Tracker = https://github.com/jMetal/jMetalPy/issues

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    tqdm
    numpy>=1.16.0
    pandas>=0.24.2
    plotly>=3.3.0
    matplotlib>=3.0.2
    scipy>=1.3.0
    statsmodels>=0.9.0
python_requires = >=3.7
setup_requires =
    setuptools

[bdist_wheel]
universal = 1

[options.extras_require]
distributed =
    dask[complete]>=1.2.2
    distributed>=1.28.1
    pyspark>=2.4.0
dev =
    isort
    black
    mypy
test =
    mockito
    PyHamcrest
all =
    %(distributed)s
    %(dev)s
    %(test)s